--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
 .App {
   height: 100vh;
 }
-.themeSwitch{
+.themeSwitch {
   position: absolute;
   bottom: 5%;
   left: 2%;
+}
+.light {
+  --pagehead: black;
+  --bgcolor: white;
+  --textcolor: black;
+}
+.dark {
+  --pagehead: #bb86fc;
+  --bgcolor: #1f1b24;
+  --textcolor: white;
 }
