--- a/src/Pages/PassWord/Password.css
+++ b/src/Pages/PassWord/Password.css
@@ -17,6 +17,7 @@
   font-size: 50px;
   font-family: "Kanit", sans-serif;
   margin: 2%;
+  color: var(--pagehead);
 }
 .form form {
   display: flex;
