--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,19 @@
   --bgcolor: #1f1b24;
   --textcolor: white;
 }
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: black;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(93, 93, 93);
+}
