--- a/src/Components/Logo/Logo.css
+++ b/src/Components/Logo/Logo.css
@@ -1,3 +1,11 @@
+.Logo h1{
+font-size: large;
+font-weight: bold;
+letter-spacing: 2px;
+margin: 0;
+}
 .Logo{
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
