--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 .themeSwitch {
   position: absolute;
   bottom: 5%;
-  left: 2%;
+  right: 2%;
 }
 .light {
   --pagehead: black;
@@ -18,17 +18,24 @@
 }
 ::-webkit-scrollbar {
   width: 5px;
+  display: none;
 }
 
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
+  display: none;
 }
 
 ::-webkit-scrollbar-thumb {
   background: black;
+  display: none;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
+  display: none;
   background: rgb(93, 93, 93);
+}
+p h1 h2 h3 h4 h5 h6 {
+  user-select: none;
 }
