--- a/src/Pages/Messaging/Chat/Chat.css
+++ b/src/Pages/Messaging/Chat/Chat.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 .Main_Chat {
-  border: 1px solid;
+  border: 0px solid;
   width: 100%;
   height: 99vh;
   overflow: hidden;
@@ -11,7 +11,7 @@
 }
 .Main_1_col {
   /* border: 1px solid; */
-  border-radius: 10px 0px 0px 10px;
+  border-radius: 30px 0px 0px 30px;
   height: 99vh;
   display: flex;
   justify-content: space-evenly;
@@ -29,4 +29,26 @@
   height: 99vh;
   border-radius: 0px 10px 10px 0px;
   background-color: #f4f3f8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.change_profile {
+  margin-top: 15%;
+  transition: 1s ease-in-out;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    45deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(32, 175, 135, 0.9724264705882353) 11%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  color: rgb(250, 250, 250);
+  font-size: 15px;
+  width: 150px;
+  height: 50px;
+  border-radius: 30px;
+  border: none;
+  font-weight: bold;
 }
