--- a/src/Pages/Messaging/ChatList/Chatlist.css
+++ b/src/Pages/Messaging/ChatList/Chatlist.css
@@ -7,6 +7,9 @@
   justify-content: space-between;
   align-items: center;
 }
+.chatlist__heading h2 {
+  font-size: 10px;
+}
 .btn-nobg {
   background-color: transparent;
   border: none;
